--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,7 @@ header {
     padding: 1rem;
     width: 100%;
     box-sizing: border-box;
-    top: 2;
-    
+    top: 2px
 }
 .container {
     max-width: 1200px;
@@ -15,17 +14,7 @@ header h1 {
     text-align: center;
     font-family: audiowide, sans-serif;
 }
-
-#carouselExample {
-    max-width: 50%; 
-}
-.carousel-item {
-    height: 100px;
-}
-
-.NFLheading {
-    max-width: 50%;
-    height: 20%;
-    top: 1%;
-}
+body {
     
+}
+
