--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,23 @@
 @import url('https://fonts.googleapis.com/css?family=Audiowide');
 header {
-    background-color: rgb(2, 2, 2);
-    color: rgb(254, 254, 255);
+    background-color: rgb(0, 0, 0);
+    background-image: url(images/NFLheading_1.jpg);
+    background-size:contain;
+    background-position: center;
+    color: rgb(255, 255, 255);
     padding: 1rem;
     width: 100%;
     box-sizing: border-box;
     top: 2px
 }
 .container {
-    max-width: 1200px;
+    max-width: 1200px;  
+    
 }
 header h1 {
     text-align: center;
     font-family: audiowide, sans-serif;
 }
-body {
-    
+body{
+    background-color: rgb(255, 255, 255);
 }
-
